fix(douyin): 校验并完整下载媒体载荷
- 在落盘前校验响应状态、类型与有效载荷
- 完整处理视频、图文和实况照片媒体
- 防止封面或错误页面被记录为主媒体